Pull request from unit_tests_org_folio_dataexp_service_logs_batch_f6f3f014_1_04a69e into master (#690)
* [chore] [mod-data-export] unit tests

* Reformatting code, refactoring

---------

Co-authored-by: aitestmate <ai_testmate@epam.com>
Co-authored-by: Viachaslau Khandramai <Viachaslau_Khandramai@epam.com>